<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.anisflix.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_movies"
        android:name="com.anisflix.ui.movies.MoviesFragment"
        android:label="@string/nav_movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/nav_series"
        android:name="com.anisflix.ui.series.SeriesFragment"
        android:label="@string/nav_series"
        tools:layout="@layout/fragment_series" />

    <fragment
        android:id="@+id/nav_tv"
        android:name="com.anisflix.ui.tv.TVChannelsFragment"
        android:label="@string/nav_tv"
        tools:layout="@layout/fragment_tv_channels" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.anisflix.ui.favorites.FavoritesFragment"
        android:label="@string/nav_favorites"
        tools:layout="@layout/fragment_favorites" />
        
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.anisflix.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />
        
    <action android:id="@+id/action_home_to_settings" destination="@id/nav_settings" />
    
</navigation>
