<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView android:id="@+id/backdrop_image" android:layout_width="match_parent" android:layout_height="200dp" />
        <ImageView android:id="@+id/poster_image" android:layout_width="100dp" android:layout_height="150dp" />
        <TextView android:id="@+id/title_text" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:id="@+id/year_text" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:id="@+id/rating_text" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:id="@+id/overview_text" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <Button android:id="@+id/play_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/action_play"/>
            <Button android:id="@+id/cast_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/action_cast"/>
            <Button android:id="@+id/favorite_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/action_favorite"/>
        </LinearLayout>
        
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/sources_recycler" android:layout_width="match_parent" android:layout_height="wrap_content" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
